# zhouyi

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: .env.example
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  bazi.py  dashboard.py  divination.py  history.py  router.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  bazi.py  divination.py  user.py
backend/app/schemas/: __init__.py  auth.py  bazi.py  divination.py  history.py
backend/app/services/bazi/: __init__.py  analyzer.py  calendar.py  wuxing.py
backend/app/services/hexagram/: __init__.py  coins.py  hexagram_data.py  interpreter.py
backend/app/tests/: __init__.py  conftest.py  test_api_integration.py  test_bazi.py  test_hexagram.py
frontend/: .env.development  index.html  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: client.ts
frontend/src/components/bazi/: BaziChart.vue  GanzhiPill.vue  WuxingRadar.vue
frontend/src/components/common/: AppLayout.vue  AppNavbar.vue  AppSidebar.vue
frontend/src/components/dashboard/: HexagramHeatmap.vue  LuckTrendLine.vue  UserActivityBar.vue  WuxingPie.vue
frontend/src/components/hexagram/: CoinToss.vue  HexagramCard.vue  HexagramLines.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: bazi.ts  hexagram.ts
frontend/src/views/: AuthView.vue  BaziView.vue  DashboardView.vue  DivinationView.vue  HistoryView.vue  HomeView.vue
